--- a/distribution/ddf-common/src/main/resources/etc/org.ops4j.pax.web.cfg
+++ b/distribution/ddf-common/src/main/resources/etc/org.ops4j.pax.web.cfg
@@ -36,14 +36,14 @@ org.ops4j.pax.web.ssl.keystore.type=${javax.net.ssl.keyStoreType}
 # SSL Truststore Type
 org.ops4j.pax.web.ssl.truststore.type=${javax.net.ssl.trustStoreType}
 
-# Keystore Integrity Password
-org.ops4j.pax.web.ssl.password=${javax.net.ssl.keyStorePassword}
-
 # Keystore Password
-org.ops4j.pax.web.ssl.keypassword=${javax.net.ssl.keyStorePassword}
+org.ops4j.pax.web.ssl.keystore.password=${javax.net.ssl.keyStorePassword}
 
 # Truststore Password
 org.ops4j.pax.web.ssl.truststore.password=${javax.net.ssl.trustStorePassword}
+
+# Key Password
+org.ops4j.pax.web.ssl.key.password=${javax.net.ssl.keyStorePassword}
 
 # Client authenticate at server is wanted
 org.ops4j.pax.web.ssl.clientauthwanted=true
