Create JAAS servlet filter that supports basic and cert auth

--- a/distribution/ddf-common/src/main/resources/etc/org.ops4j.pax.web.cfg
+++ b/distribution/ddf-common/src/main/resources/etc/org.ops4j.pax.web.cfg
@@ -46,7 +46,7 @@ org.ops4j.pax.web.ssl.truststore.password=${javax.net.ssl.trustStorePassword}
 org.ops4j.pax.web.ssl.key.password=${javax.net.ssl.keyStorePassword}
 
 # Client authenticate at server is wanted
-org.ops4j.pax.web.ssl.clientauthwanted=true
+org.ops4j.pax.web.ssl.clientauth.wanted=true
 
 # Included SSL/TLS Cipher Suites comma-separated list of Regular Expressions
 org.ops4j.pax.web.ssl.ciphersuites.included=${https.cipherSuites}
