--- a/distribution/ddf-common/src/main/resources/etc/users.properties
+++ b/distribution/ddf-common/src/main/resources/etc/users.properties
@@ -29,7 +29,9 @@
 # and modifiable via the JAAS command group. These users reside in a JAAS domain
 # with the name "karaf".
 #
+#karaf = karaf,_g_:admingroup
+#_g_\:admingroup = group,admin,manager,viewer,systembundles,ssh
 
 # DDF Changes: changed username/pw to admin/admin, added localhost certificate user
-admin=admin,group,admin,manager,viewer,system-admin,systembundles,ssh
-localhost=localhost,group,admin,manager,viewer,system-user,system-admin,system-history,localhost-data-manager,systembundles,ssh
+admin=admin,group,admin,manager,viewer,systembundles,ssh
+localhost=localhost,group,admin,manager,viewer,systembundles,ssh,system
