--- a/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
+++ b/distribution/ddf-common/src/main/resources-filtered/etc/custom.system.properties
@@ -6,7 +6,6 @@
 # DDF Environment Settings
 ddf.etc=${karaf.etc}
 ddf.data=${karaf.data}
-derby.system.home=${karaf.home}/data/derby
 
 #
 # Keystore and Truststore Java Properties
@@ -51,22 +50,15 @@ org.codice.ddf.external.httpPort=_DO_NOT_EXPAND_${org.codice.ddf.system.httpPort
 org.codice.ddf.external.port=_DO_NOT_EXPAND_${org.codice.ddf.external.httpsPort}
 org.codice.ddf.external.context=
 
-# Whether or not CSRF filtering should be enabled. This should only be disabled for testing and
-# debugging purposes, otherwise the system will be left insecure.
-csrf.enabled=true
-
-# Comma separated list of host/port combinations that can be trusted to make requests to DDF.
-csrf.trustedAuthorities=
-
 #
 # System Information Properties
 #
-org.codice.ddf.system.branding=${branding-lowercase}
+org.codice.ddf.system.branding=${branding}
+org.codice.ddf.system.name=${branding-lowercase}
 org.codice.ddf.system.siteName=${sitename.default}
 org.codice.ddf.system.siteContact=
 org.codice.ddf.system.version=${project.version}
 org.codice.ddf.system.organization=${organization.name}
-org.codice.ddf.system.registry-id=
 
 #
 # Solr Provider Configuration
