--- a/distribution/ddf-common/src/main/resources/etc/org.ops4j.pax.logging.cfg
+++ b/distribution/ddf-common/src/main/resources/etc/org.ops4j.pax.logging.cfg
@@ -137,8 +137,8 @@ log4j2.appender.stdout.layout.pattern = ${log4j2.pattern}
 # out
 log4j2.appender.out.type = RollingFile
 log4j2.appender.out.name = out
-log4j2.appender.out.fileName = ${karaf.log}/${org.codice.ddf.system.branding}.log
-log4j2.appender.out.filePattern = ${karaf.log}/${org.codice.ddf.system.branding}.log-%d{yyyy-MM-dd-HH}-%i.log.gz
+log4j2.appender.out.fileName = ${karaf.log}/${org.codice.ddf.system.name}.log
+log4j2.appender.out.filePattern = ${karaf.log}/${org.codice.ddf.system.name}.log-%d{yyyy-MM-dd-HH}-%i.log.gz
 log4j2.appender.out.append = true
 log4j2.appender.out.layout.type = PatternLayout
 log4j2.appender.out.layout.pattern = ${log4j2.pattern}
