Remove CXF and JAX-RS from CSW source and related modules

--- a/catalog/spatial/csw/spatial-csw-source/pom.xml
+++ b/catalog/spatial/csw/spatial-csw-source/pom.xml
@@ -59,10 +59,6 @@
             <artifactId>catalog-core-urlresourcereader</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.cxf</groupId>
-            <artifactId>cxf-rt-frontend-jaxrs</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.codice.ddf.spatial</groupId>
             <artifactId>spatial-csw-action</artifactId>
             <version>${project.version}</version>
@@ -79,6 +75,15 @@
             <groupId>org.codice.ddf.spatial</groupId>
             <artifactId>spatial-ogc-common</artifactId>
         </dependency>
+<!--        <dependency>-->
+<!--            <groupId>ddf.jaxb</groupId>-->
+<!--            <artifactId>catalog-transformer-xml-binding</artifactId>-->
+<!--        </dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>ddf.catalog.transformer</groupId>-->
+<!--            <artifactId>catalog-transformer-xml</artifactId>-->
+<!--            <version>${project.version}</version>-->
+<!--        </dependency>-->
         <dependency>
             <groupId>org.codice.ddf.spatial</groupId>
             <artifactId>spatial-csw-common</artifactId>
@@ -171,6 +176,9 @@
                             spatial-ogc-common,
                             spatial-csw-transformer,
                             catalog-core-api-impl,
+<!--                            catalog-transformer-xml-binding,-->
+<!--                            catalog-transformer-xml,-->
+<!--                            gml-v_3_1_1-schema;inline=true,-->
                             commons-collections4,
                             ogc-tools-gml-jts,
                             jaxb2-basics-runtime,
